# tritsk

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: constants.py  database.py  main.py  tables.py  utils.py
api/auth/: auth.py  commands.py  hypermedia.py  models.py  router.py
api/priorities/: commands.py  entities.py  hypermedia.py  services.py
api/projects/: commands.py  hypermedia.py  queries.py  router.py
api/status/: entities.py  hypermedia.py  mapping.py  queries.py
api/tasks/: commands.py  entities.py  hypermedia.py  mappings.py  queries.py  router.py  schemas.py
api/tasks/subtasks/: commands.py  queries.py  schemas.py
api/templates/: list.assign.user.form.html  list.priorities.get.html  list.projects.get.html  list.status.get.html  list.tasks.project.user.get.html  projects.get.html  projects.tasks.get.html  status.get.html  subtasks.get.html  tasks.edit.form.html  tasks.get.html
api/users/: commands.py  hypermedia.py  mapping.py  queries.py  router.py
db/: create_db_schema.sql  init-db.sh
fp/: .gitignore
fp/api/: config.py  tables.py  utils.py
fp/api/priorities/: queries.py
fp/api/projects/: services.py
fp/api/tasks/: queries.py  router.py
fp/api/templates/: allusers.get.html  current.user.html  list.status.get.html  (+5 more)
fp/src/: create-project.html  create-subtask.html  create-task.html  priorities.html
oop/api/: main.py
oop/src/: create-priority.html  create-user.html
src/: create-task.html  create-user.html  login.html  main.css  main.html  priorities.html  projects.html  users.html
(+20 files in other folders)
